feat: add logo asset and enhance landing page with navbar and routing

--- a/nx-workspace/apps/client/public/i18n/es.json
+++ b/nx-workspace/apps/client/public/i18n/es.json
@@ -5,5 +5,22 @@
     "401": "No tienes permiso para acceder a esta página.",
     "404": "Página no encontrada.",
     "default": "Error desconocido."
+  },
+  "general":{
+    "quotationBtn":"Cotizar",
+    "logo":{
+      "alt":"Logo"
+    }
+  },
+  "pages":{
+    "home":"Inicio",
+    "services":"Servicios",
+    "reviews":"Reseñas",
+    "gallery":"Galería",
+    "about":"Nosotros",
+    "contact":"Contacto",
+    "quoation":"Cotizar"
+  },
+  "home":{
   }
 }
